Fix rating stars on mobile

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -507,8 +507,8 @@
 .agg-action {
   .rating-container {
     display: inline-block;
-    position: absolute;
-    padding-left: 5px;
+    position: relative;
+    top: 2px;
     svg {
       width: 15px;
       height: 15px;
